# cbf_mppi_f1tenth

./: .gitignore  Introduction_to_JAX.ipynb  LICENSE  MPPI_GUIDE.md  README.md  follow_jax.py
media/: CBF_MPPI_README.md
mppi_bringup/: CMakeLists.txt  package.xml
mppi_bringup/config/: FOXGLOVE_TUNING_SETUP.md  params_houston_main.yaml  params_ice.yaml  params_ice_reliable.yaml  params_lev.yaml  params_real.yaml  params_realev_overtake.yaml  params_sim.yaml  params_sim_houston.yaml  params_sim_lev.yaml  params_sim_lev_overtake.yaml  params_sim_overtake.yaml  params_sim_skirk.yaml  params_skirk.yaml
mppi_bringup/config/foxglove/: sim_mppi_tuning.json
mppi_bringup/config/old/: params_lev.yaml
mppi_bringup/launch/: houston_main1.launch.py  lev.launch.py  mppi.launch.py  real.launch.py  sim.launch.py  sim_houston.launch.py  sim_overtake.launch.py  sim_skirk.launch.py  skirk.launch.py
mppi_bringup/launch/old/very_old/: lev2fl.launch.py
mppi_bringup/maps/: ice_rink1.pgm  ice_rink1.yaml  lev_hall_lap1.pgm  lev_hall_lap1.yaml  racetrack_levine_cleaned.pgm  racetrack_levine_cleaned.yaml
mppi_bringup/waypoints/: houston_main4.csv  houston_main5.csv
mppi_bringup/waypoints/lev_testing/: houston_main2.csv  houston_main3.csv  rt_lev4_slower.csv
mppi_example/: package.xml  setup.cfg  setup.py
mppi_example/mppi_example/: README.md  config.yaml  infer_env.py  mppi_node.py  (+2 more)
opponent_predictor/: CMakeLists.txt  README.md  package.xml
opponent_predictor/config/: lidar_detector.yaml  params.yaml
opponent_predictor/config/hardware/: lidar_detector.yaml  params.yaml
opponent_predictor/launch/: opponent_predictor.launch.py
opponent_predictor/src/: opponent_lidar_detector_node.cpp  opponent_predictor_node.cpp
(+2 files in other folders)
