<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mppi_bringup</name>
  <version>0.0.0</version>
  <description>Launch and parameter files for the JAX MPPI controller.</description>
  <maintainer email="cedrich@seas.upenn.edu">cedric</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>mppi_example</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
